syntax = "proto3";

package aspb;

import "aspb/anime_season.proto";
import "aspb/tag.proto";
import "nfpb/meta.proto";
import "nfpb/genre.proto";
import "nfpb/studio.proto";
import "shpb/anime_resource.proto";
import "shpb/anime_image.proto";
import "shpb/anime_trailer.proto";

option go_package = "github.com/dj-yacine-flutter/gojo/pb/aspb";

message GetFullAnimeSeasonRequest {
    int64 seasonID = 1;
    int32 languageID = 2;
}

message GetFullAnimeSeasonResponse { 
    AnimeSeasonResponse animeSeason = 1;
    nfpb.AnimeMetaResponse seasonMeta = 2;
    shpb.AnimeResourceResponse seasonResoures = 3;
    nfpb.AnimeGenresResponse seasonGenres = 4;
    nfpb.AnimeStudiosResponse seasonStudios = 5;
    repeated AnimeSeasonTag seasonTags = 6;
    repeated shpb.ImageResponse seasonPosters = 7;
    repeated shpb.AnimeTrailerResponse seasonTrailers = 8;
}